--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -11,7 +11,7 @@
   "icon": "image/icon.png",
   "desktop": {
     "js": ["https://js.cybozu.com/jquery/3.3.1/jquery.min.js", "js/desktop.js"],
-    "css": ["css/51-modern-default.css", "css/desktop.css"]
+    "css": ["css/51-modern-default.min.css", "css/desktop.css"]
   },
   "mobile": {
     "js": ["https://js.cybozu.com/jquery/3.3.1/jquery.min.js", "js/mobile.js"],
@@ -20,7 +20,7 @@
   "config": {
     "html": "html/config.html",
     "js": ["https://js.cybozu.com/jquery/3.3.1/jquery.min.js", "js/config.js"],
-    "css": ["css/51-modern-default.css", "css/config.css"],
+    "css": ["css/51-modern-default.min.css", "css/config.css"],
     "required_params": ["message"]
   }
 }
